infrastructure/config/base/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
spec:
  ingressClassName: cilium
  rules:
    - host: "cwk.vault"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: vault-frontend
                port:
                  number: 80
